#ifndef TUI_HPP
#define TUI_HPP

#include <string>
#include <vector>
#include <memory> 
#include "pageNumber.hpp"

class System;
class HeroBase;
class MonsterBase;
class Place;
class Villager;


class Tui final {
    System *sys {nullptr};
    std::vector<std::string> playerPriority;
    int pageNumber {0};
    std::string playedMonsterCard = "This is the first round";
public:
    explicit Tui(System *s);
    void header() const;
    void heroInfo(std::shared_ptr<HeroBase>& hero);
    void showNeighborsInfo(std::shared_ptr<HeroBase>& hero);
    void monstersInfo();
    void VillagersInfo();
    void welcomePage();
    void quitPage() const;
    void displayActions() const;
    void runGame();
    void backButton();
    int monsterPhasePage(std::shared_ptr<HeroBase>& hero);
    void heroPhasePage(std::shared_ptr<HeroBase>& hero , int actions);
    void terrorLevel(int level);
    void movePage(std::shared_ptr<HeroBase>& hero , int &actions);
    void guidePage(std::shared_ptr<HeroBase>& hero ,int &actions);
    void pickUpPage(std::shared_ptr<HeroBase>& hero ,int &actions);
    void advancedPage(std::shared_ptr<HeroBase>& hero,int &actions);
    void specialActionPage(std::shared_ptr<HeroBase>& hero,int &actions);
    void playPerkPage(std::shared_ptr<HeroBase>& hero , int &actions , bool &doMonsterPhase );
    void defeatPage(std::shared_ptr<HeroBase>& hero , int &actions);
    void helpPage();
};

#endif // !TUI_HPP